--- a/ReleaseApp/ReleaseApp/LoginPage.xaml
+++ b/ReleaseApp/ReleaseApp/LoginPage.xaml
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:ReleaseApp"
+             xmlns:effects="clr-namespace:ReleaseApp.Effects"
              x:Class="ReleaseApp.LoginPage"
              Title="Login Page"
              BackgroundColor="White">
@@ -8,24 +10,28 @@
     <StackLayout Spacing="0" Padding="0" Margin="50">
         <Image Source="LogoColor.png" HorizontalOptions="End"/>
 
-        <Entry x:Name="email"
+        <Entry x:Name="id_entry"
                Text="Email"
                TextColor="Black" 
                HorizontalOptions="CenterAndExpand"
                HorizontalTextAlignment="Start"
-               WidthRequest="100"/>
-        <Entry x:Name="password"
+               WidthRequest="500"/>
+        <Entry x:Name="pw_entry"
                Text="Password"
                IsPassword="False"
                HorizontalOptions="CenterAndExpand" 
                TextColor="Black"
                HorizontalTextAlignment="Start"
-               WidthRequest="100"/>
-        <Button Text="Login"
+               WidthRequest="500"/>
+        <Button x:Name="login_btn"
+                Text="Login"
                 FontSize="15"
                 TextColor="Black"
-                BackgroundColor="#ffa101"/>
-        <Label x:Name="Forgot"
+                BackgroundColor="#ffa101"
+                WidthRequest="500"
+                HeightRequest="50"
+                Clicked="LoginAttempt"/>
+        <Label x:Name="find_idpw"
                Text="Forgot my ID/PW" 
                TextColor="Blue" 
                HorizontalOptions="Center"
